@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.9
 
 	- Documentation updates (STR #2904)
+	- The socket backend could wait indefinitely for back-
+	  channel data with some devices.
 	- PJL panel messages were not reset correctly on older
 	  printers (STR #2909)
 	- cupsfilter used the wrong default path (STR #2908)
